src/objects/Account_Profile__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Profile</relationshipLabel>
        <relationshipName>Account_Profile</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Actual_Sales_Fiscal_Month__c</fullName>
        <label>Actual Sales Fiscal Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Units_Fiscal_Month__c</fullName>
        <label>Actual Units Fiscal Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MonthDate__c</fullName>
        <label>Fiscal Month/Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PoroductCategory__c</fullName>
        <label>PoroductCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <label>ProductCategory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>ProductLine</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RSD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SJMSalesKey__c</fullName>
        <label>SJMSalesKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesRevenueTarget__c</fullName>
        <label>SalesRevenueTarget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SalesUnitTarget__c</fullName>
        <label>SalesUnitTarget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Profile</label>
    <listViews>
        <fullName>All_Account_Profile_Data</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>MonthDate__c</columns>
        <columns>ProductLine__c</columns>
        <columns>SalesRevenueTarget__c</columns>
        <columns>Actual_Sales_Fiscal_Month__c</columns>
        <columns>SalesUnitTarget__c</columns>
        <columns>Actual_Units_Fiscal_Month__c</columns>
        <columns>RSD__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Account Profile Data</label>
    </listViews>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Account Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Profile</pluralLabel>
    <recordTypes>
        <fullName>Account_Sales_Data</fullName>
        <active>true</active>
        <label>Account Sales Data</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>